[package]
name = "argon_m2_fan_i2c"
version = "0.1.0"
edition = "2021"
authors = [
    "Maxim Vladimirov <vladimirov.m.m@mail.ru>",
]
license = "MIT"
description = "Starting and controlling the fan for **Argon One M2** on **Ubuntu Server 22.04**."
keywords = ["argon one m2", "ubuntu", "fan", "i2c"]

[dependencies]
anyhow = "~1.0.66"
i2cdev = "~0.5.1"
sysinfo = "~0.27.0"
lazy_static = "~1.4.0"